--- a/services/API-service/package.json
+++ b/services/API-service/package.json
@@ -76,7 +76,7 @@
     "ts-node": "^10.9.2",
     "tsc-watch": "^6.0.0",
     "tsconfig-paths": "^3.9.0",
-    "xlsx": "^0.18.5",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz",
     "yargs": "^17.0.0"
   }
 }
